--- a/ProjectStart/ProjectStart/ProjectStart.vcxproj
+++ b/ProjectStart/ProjectStart/ProjectStart.vcxproj
@@ -64,6 +64,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Class_HelperClass\Class_HelperClass\HelperBot.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Class_HelperClass\Class_HelperClass\HelperBot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
