--- a/02_25_14/MoreLoops/MoreLoops/MoreLoops.vcxproj
+++ b/02_25_14/MoreLoops/MoreLoops/MoreLoops.vcxproj
@@ -64,11 +64,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\02_20_14\HelperClass\HelperClass\HelperBot.cpp" />
+    <ClCompile Include="..\..\..\Class_HelperClass\Class_HelperClass\HelperBot.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\02_20_14\HelperClass\HelperClass\HelperBot.h" />
+    <ClInclude Include="..\..\..\Class_HelperClass\Class_HelperClass\HelperBot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
