--- a/Class_HelperClass/Class_HelperClass/Class_HelperClass.vcxproj
+++ b/Class_HelperClass/Class_HelperClass/Class_HelperClass.vcxproj
@@ -64,10 +64,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Collection.cpp" />
     <ClCompile Include="HelperBot.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Collection.h" />
     <ClInclude Include="HelperBot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
