--- a/Class_HelperClass/Class_HelperClass/Class_HelperClass.vcxproj.filters
+++ b/Class_HelperClass/Class_HelperClass/Class_HelperClass.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="HelperBot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Collection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HelperBot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Collection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
