--- a/Assignment15/Assignment15/Assignment15.vcxproj
+++ b/Assignment15/Assignment15/Assignment15.vcxproj
@@ -64,6 +64,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Class_HelperClass\Class_HelperClass\Collection.cpp" />
+    <ClCompile Include="..\..\Class_HelperClass\Class_HelperClass\HelperBot.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Class_HelperClass\Class_HelperClass\Collection.h" />
+    <ClInclude Include="..\..\Class_HelperClass\Class_HelperClass\HelperBot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
