--- a/SuperHeroes/SuperHeroes.cbp
+++ b/SuperHeroes/SuperHeroes.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="HelperBot" />
+		<Option title="SuperHeroes" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/HelperBot" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/SuperHeroes" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/HelperBot" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/SuperHeroes" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,10 +32,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Collection.cpp" />
-		<Unit filename="Collection.h" />
-		<Unit filename="HelperBot.cpp" />
-		<Unit filename="HelperBot.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
