--- a/Sort/Sort.cbp
+++ b/Sort/Sort.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="SuperHeroes" />
+		<Option title="Sort" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/SuperHeroes" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Sort" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/SuperHeroes" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Sort" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,8 +32,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="SuperHero.cpp" />
-		<Unit filename="SuperHero.h" />
+		<Unit filename="../HelperBot/Collection.cpp" />
+		<Unit filename="../HelperBot/Collection.h" />
+		<Unit filename="../HelperBot/HelperBot.cpp" />
+		<Unit filename="../HelperBot/HelperBot.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
